[tool.poetry]
name = "pointcloud_merge_tool"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
open3d = "^0.13.0"
rosbag = "^1.15.11"
lz4 = "^3.1.3"
sensor-msgs = "^1.13.0"
geometry-msgs = "^1.13.0"
nav-msgs = "^1.13.0"
actionlib-msgs = "^1.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "catkin-pkg"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "ros"
url = "https://rospypi.github.io/simple/"
secondary = true
